--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Welcome</h1>
+
+    <h1>Chore Control</h1>
+    <% if logged_in? %>
+        <p><a href="/home">Home</a> <a href="/routines">Routines</a> <a href="/products">Tools</a></p>
+        <form action="/logout" method="post">
+            <input type="hidden" name="_method" value="delete">
+            <input type="submit" value="Log Out">
+        </form>
+    <% end %>
+
     <%= yield %>
 </body>
 </html>
