--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to your Album Organizer</h1>
+<h1>Welcome to your Chore Organizer</h1>
 
-<h3>To participate clickity clack <a href='/login'>Login</a> or <a href='/signup'>Sign up</a> </h3>
+<h3>To get started please <a href='/login'>Login</a> or <a href='/signup'>Sign up</a> </h3>
                                   
