--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,7 @@
 
     <h1>Chore Control</h1>
     <% if logged_in? %>
-        <p><a href="/home">Home</a> <a href="/routines">Routines</a> <a href="/products">Tools</a></p>
+        <p><a href="/home">Home</a> <a href="/routines">Chores</a> <a href="/products">Tools</a></p>
         <form action="/logout" method="post">
             <input type="hidden" name="_method" value="delete">
             <input type="submit" value="Log Out">
