--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
-<h1>Welcome to your Chore Organizer</h1>
+<h2>Welcome to your Chore Organizer</h2>
+<img src="public/images/images.jpeg" alt="Man folding towel"/> 
 
 <h3>To get started please <a href='/login'>Login</a> or <a href='/signup'>Sign up</a> </h3>
                                   
