--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,6 +10,7 @@
 <body>
 
     <h1 class="home" >Chore Control</h1>
+    <img src="images/images.jpeg" alt="Man folding towel"/> 
     <% if logged_in? %>
         <p><a href="/home">Home</a> <a href="/chores">Chores</a> <a href="/tools">Tools</a></p>
         <form action="/logout" method="post">
