--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,15 @@ html {
     text-align: center;
 }
 
+img {
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+
+}
+
 .danger {
     color: red;
 }
