--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,8 +1,11 @@
 <h2>Welcome back,  <%= @user.username %></h2>
 
+
+
 <h4>What chore would you like to review?</h4>
 <% @user.chores.each do |clean| %>
-   <ol><%=clean.name%></ol>
+   <ol><a href="/chores"><%=clean.name%></a></ol>
 <% end %>
 
-<a href=""></a>
+<h3><a href="/chores/new">Add a new chore?</a></h3>
+
