--- a/app/views/chores/edit.erb
+++ b/app/views/chores/edit.erb
@@ -4,7 +4,7 @@
 <form method="post" action="/chores/<%= @chore.id %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
 
-   <label for="name">Enter name here:</label>
+   <label for="name">Enter chore here:</label>
    <input type="text" name="name" id="name">
 
    <label for="chore">Enter description here:</label>
