--- a/app/views/chores/new.erb
+++ b/app/views/chores/new.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <form action="/chores" method="post">
-   <label for="name">Enter name here:</label>
+   <label for="name">Enter chore here:</label>
    <input type="text" name="name" id="name"><br>
 
    <label for="chore">Enter description here:</label>
