--- a/app/views/chores/update.erb
+++ b/app/views/chores/update.erb
@@ -3,7 +3,7 @@
 <form method="post" action="/chores/<%= @chore.id %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
 
-   <label for="name">Enter name here:</label>
+   <label for="name">Enter chore here:</label>
    <input type="text" name="name" id="name">
 
    <label for="chore">Enter description here:</label>
@@ -15,5 +15,5 @@
 
 <form method ="post" action="/chores/<%= @chore.id %>">
    <input id="hidden" type="hidden" name="_method" value="delete">
-   <input type="submit" value="delete">
+   <input type="submit" value="delete">s
 </form>
